--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 .container {
   width: 300px;
-  height: 300px;
+  height: 380px;
   background-color: #fff;
   position: absolute;
   top: 0;
@@ -58,7 +58,7 @@ body {
 
 .weather-container {
   width: 300px;
-  height: 260px;
+  height: 355px;
   background-color: #f4f9ff;
 }
 
@@ -102,7 +102,39 @@ body {
   text-align: center;
   font-size: 1.2em;
 }
+.wind-speed {
+}
 
+.wind-speed p {
+  padding: 3px;
+  margin: 0;
+  color: #293251;
+  font-family: chivo;
+  text-align: center;
+  font-size: 1em;
+}
+.rainfall {
+}
+
+.rainfall p {
+  padding: 3px;
+  margin: 0;
+  color: #293251;
+  font-family: chivo;
+  text-align: center;
+  font-size: 1em;
+}
+.sun-rise {
+}
+
+.sun-set p {
+  padding: 3px;
+  margin: 0;
+  color: #293251;
+  font-family: chivo;
+  text-align: center;
+  font-size: 1em;
+}
 .location {
 }
 
@@ -112,5 +144,38 @@ body {
   color: #293251;
   font-family: chivo;
   text-align: center;
-  font-size: 0.8em;
+  font-size: 1.3em;
+}
+
+/* Stars */
+
+.star {
+  width: 1px;
+  height: 1px;
+  position: absolute;
+  background: #fff;
+  border-radius: 50px;
+  animation: move;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+.type-1 {
+  width: 1px;
+  height: 1px;
+}
+.type-2 {
+  width: 2px;
+  height: 2px;
+}
+.type-3 {
+  width: 3px;
+  height: 3px;
+}
+@keyframes move {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-1000px);
+  }
 }
